tests/ui/issues/issue-3099-a.rs
enum A { B, C }

enum A { D, E } //~ ERROR the name `A` is defined multiple times

fn main() {}
